{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 14,
  "lineage": "5faef82c-89a0-24d7-477c-82a7aaec3ce6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db5c626cc3c48e08",
            "association_id": "eipassoc-0b7db15f6d04b876d",
            "domain": "vpc",
            "id": "eipalloc-0db5c626cc3c48e08",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0a938f00b5f00e732",
            "private_dns": "ip-10-190-1-178.us-west-1.compute.internal",
            "private_ip": "10.190.1.178",
            "public_dns": "ec2-54-177-154-51.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.154.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:internet-gateway/igw-0957e7c62e6a6ed95",
            "id": "igw-0957e7c62e6a6ed95",
            "owner_id": "311747045935",
            "tags": {
              "Name": "PRD IGW"
            },
            "tags_all": {
              "Name": "PRD IGW"
            },
            "vpc_id": "vpc-0bc9652bbad6a7ec7"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db5c626cc3c48e08",
            "connectivity_type": "public",
            "id": "nat-016dc973ec3675f04",
            "network_interface_id": "eni-0a938f00b5f00e732",
            "private_ip": "10.190.1.178",
            "public_ip": "54.177.154.51",
            "subnet_id": "subnet-03c5940296b1a8e39",
            "tags": {
              "Name": "PRD NAT Gateway"
            },
            "tags_all": {
              "Name": "PRD NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_subnet.publicsubnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:route-table/rtb-0f1787821ef0d2571",
            "id": "rtb-0f1787821ef0d2571",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-016dc973ec3675f04",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc9652bbad6a7ec7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_subnet.publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:route-table/rtb-03939177b970e9791",
            "id": "rtb-03939177b970e9791",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0957e7c62e6a6ed95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc9652bbad6a7ec7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0177ea1c7d175f672",
            "route_table_id": "rtb-0f1787821ef0d2571",
            "subnet_id": "subnet-0306cc34070b485c9"
          },
          "dependencies": [
            "aws_eip.nateIP",
            "aws_nat_gateway.NATgw",
            "aws_route_table.PrivateRT",
            "aws_subnet.privatesubnets",
            "aws_subnet.publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033fdfada6f06f70a",
            "route_table_id": "rtb-03939177b970e9791",
            "subnet_id": "subnet-03c5940296b1a8e39"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:subnet/subnet-0306cc34070b485c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.190.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0306cc34070b485c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Private Subnet"
            },
            "tags_all": {
              "Name": "PRD Private Subnet"
            },
            "vpc_id": "vpc-0bc9652bbad6a7ec7"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:subnet/subnet-03c5940296b1a8e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.190.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c5940296b1a8e39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Public Subnet"
            },
            "tags_all": {
              "Name": "PRD Public Subnet"
            },
            "vpc_id": "vpc-0bc9652bbad6a7ec7"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:311747045935:vpc/vpc-0bc9652bbad6a7ec7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.190.0.0/16",
            "default_network_acl_id": "acl-054d61d447590e90f",
            "default_route_table_id": "rtb-0292ce716519ac2bd",
            "default_security_group_id": "sg-035b0bc21bb639b09",
            "dhcp_options_id": "dopt-0666e71eb77786b96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc9652bbad6a7ec7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0292ce716519ac2bd",
            "owner_id": "311747045935",
            "tags": {
              "Name": "PRD VPC"
            },
            "tags_all": {
              "Name": "PRD VPC"
            }
          }
        }
      ]
    }
  ]
}